# api

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml  example.env
.github/workflows/: production.yml  staging.yml
.sqlx/: query-00cde601dd36c611e1dd6bcb5cb26a1478ded0f76957f5e7317a14f270036fe4.json  query-01a58177ed09daa8be62ce4047572917dcd8cde7440c9a08a95a4eda840b65a2.json  query-0afb13bc8f1971f5a2b2a212fbafdd111b401bd0db2216f7a26db1bb2af32eae.json  query-0e296214c9a145bb4f54927f61837c9606e74dbe534d962b0ace5cd0eb0c062d.json  query-1168f49df4f3d57da4776e4de65865944895319307a1c9a2c9b5c7f1591f5ab2.json  query-17eb1842fbf11b4904d3e0b6788669b6266a87bb0f6dd2ca6f818045c06dd992.json  query-18a29f34ec8df6250772b90a632432a528a1e9e8d691fa5b41bf06376534167a.json  query-1f02c7752c4cafdf89aa4f68c2ffbea050c7ca9d763c9c1be0272c8d8bfb6726.json  query-1f960904999585e888284f073b5d42d8cfbf6b85d5144dd201e465a822869336.json  query-206bdd53f17d4bff9dd617189606740d470a2e4faf7e9fe09b2e07c93db1c041.json  query-28fb38041ccffaa1e879f11cfac65c41213b28dfd6892822d6a00830a8c50e1d.json  query-34712d078ad7d96d4520c7740baa61894a6168b3b888eb5be640aa4eb9e08627.json  query-356dd30a997182baaab9f0b9f33c1c14b986f7df232496a4ad68a021fbd84ab0.json  query-35e5986977f565853e6566dc81201552e338d54d2d373c079f766e31c6655d7e.json  query-39e495c34f77ceafc3933fc3dd5eb7fa41e6f671500b0018ab9cfa628376ca69.json  query-3a6a293a3b4efe017dd05ecb24f51b5e2b362720ee31ab5b8b8965552f9afe86.json  query-3eaf107dfda3f343553176aaad894b0b42362a16272d0cbee71222ba7bb51072.json  query-3ef479e9465813b9659f919f3c6f05acfaed9c6e3a5ad74f042c904d67d3373f.json  query-42bcf5d8a46464e3f82b35ff7b7b68522238eed2781d8a16c5f924c5a800b061.json  query-48f3e7c6fa8c15ef47b04c0dbacc954c877ba61c3b5fa656eb1ddcc8120e6517.json  query-4c1de95cd5051bb191387c7854e5d6bc14b496db54dbea4e9144fca5f5eb3d29.json  query-52f18491d1a27ee38a4a4360bdd1f15858a3a306922da8f177eb14bf3e3ae874.json  query-5f9fce583d45a73bcd73a026833042a2212d03fa2838747d32af78123de78ef8.json  query-62d9c8b7dd477c5274a2f72698c326d55513af8506f6df5a506f57c0c1097ffe.json  query-6a371853134f42476cae8483bddb4d21e74b5c9bb5e543b2de56358f7be7b543.json  query-6f1aa30797eaeb72e2eb2bec097176d79b96414c749dd18ed96dd2810979c4eb.json  query-83a6cebb702680ffbadbc4e1b2c18334a7bc1d57cd69ed9481da2407c552faca.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-923cceabfa4aed755ac52b68aa40b63303d4b5bfa99a3493e604905b197dcf55.json  query-991db0460d97946627995a017db403532cf76960d918e562862486c5a8274c6e.json  query-9f447ad772f2ca43de9435351282693f885a4edee1889cfa8358710dd0e6921b.json  query-a26cf7081ff9e896fe2f361d738e6fbb3d3572dd1612a610cf3e2da72d529ab1.json  query-a68d3d2d8a0a8080e8d55dd728b0f7a67066d59a0809c540e6315294da6c8ac3.json  query-a80e0ec3c4d048c8aef13b2619752d6f686f0f671baf9a688268f5bc6a91d948.json  query-ade6a477ff76c4500f90e998724f945371825fa64acbef42b893dfc03368a9ab.json  query-b049e2244ec0077ca85639945bd6c843e83b866a2e234230e0e0ef9e614bb2d7.json  query-b0cf652f9d84a671970d52568861ea0c0bfa9febc0dae98143e47c1f6117f680.json  query-bb47ce22abd0b5b77bda6848da158226cced0b0e3def76ac84b5f14f56771cd6.json  query-c4dbdf0f76cfa5f5266294c8c1d6f437ddbbb491315a3b185d7cd17b1a8a91dd.json  query-cde58203c8735a707da69b0a65765045383635659cfc77d12ec24e3c643052e9.json  (+9 more)
_entity/src/: version_beat_saber_versions.rs
_migration/: Cargo.toml
app/: Cargo.toml
app/src/: main.rs  utils.rs
app/src/routes/: mods.rs  users.rs
app/src/structs/: auth.rs  github.rs  mods.rs  users.rs
entity/: Cargo.toml
entity/src/entities/: beat_saber_versions.rs  categories.rs  mod_stats.rs  mod_versions.rs  mods.rs  users.rs  users_mods.rs  version_beat_saber_versions.rs  version_stats.rs  versions.rs  versions_conflicts.rs  versions_dependents.rs
meilisearch-entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: m20230806_034429_melilisearch.rs
migrations/: 20231211211755_create_tables.down.sql  20231211211755_create_tables.up.sql  20231211212020_load_default_data.down.sql  20231211212020_load_default_data.up.sql
src/: auth.rs  cdn.rs  debug.rs  entities.rs  main.rs  models.rs  mods.rs  routes.rs  schema.rs  search.rs  structs.rs  users.rs  versions.rs
src/routes/: mods.rs  users.rs
src/structs/: auth.rs  github.rs  mods.rs  users.rs
utils/dummy-data-loader/: Cargo.toml
utils/dummy-data-loader/src/: main.rs
