[package]
name = "api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/beat-forge/api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-cors = "0.6.4"
# actix-web = "4.4.0"
# actix-web-lab = "0.20.1"
chrono = { version = "0.4.31", features = ["serde"] }
# sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-actix-rustls"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
# entity = { path = "./entity" }
dotenv = "0.15.0"
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
bitflags = "2.4.1"
cached = "0.44.0"
jsonwebtoken = "9.1.0"
rand = "0.8.5"
minreq = { version = "2.11.0", features = ["serde_json", "json-using-serde", "https-rustls"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
forge-lib = { git = "https://github.com/beat-forge/lib", version = "1.0.0" }
# migration = { path = "./migration" }
semver = "1.0.20"
once_cell = "1.18.0"
meilisearch-sdk = "0.24.3"
meilisearch-entity = { path = "./meilisearch-entity" }
tap = "1.0.1"
async-graphql = { version = "6.0.11", features = ["uuid08", "chrono", "playground", "tracing"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
# async-graphql-actix-web = "6.0.11"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter", "fmt"] }
poem = "1.3.59"
async-graphql-poem = "6.0.11"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
anyhow = "1.0.75"
