
[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", features = ["rustls"] }
bitflags = "2.3.3"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
forge-lib = { git = "https://github.com/beat-forge/lib", version = "0.1.0" }
futures = "0.3.28"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "rustls"] }
sea-orm = { version = "0.11.3", features = [
    "macros",
    "chrono",
    "uuid",
    "sqlx-postgres",
    "runtime-actix-rustls",
] }
entity = { path = "../entity" }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
uuid = { version = "1.4.0", features = ["v4"] }
rayon = "1.7.0"
