[package]
name = "meilisearch-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
entity = { path = "../entity" }
sea-orm = "0.12.4"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.191", features = ["derive"] }
